# fastapi-health-check

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  main.py  mkdocs.yml  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: custom-checks.md  endpoint-behavior.md  index.md  installation.md  local-preview.md  quickstart.md
src/examples/: basic_app.py
src/fastapi_health_check/: __init__.py  checks.py  models.py  registry.py  ui.py
src/fastapi_health_check/assets/: __init__.py  health-report.css  health-report.html
src/fastapi_health_check/integration/: __init__.py  fastapi.py
tests/: conftest.py  test_checks.py  test_fastapi_integration.py  test_registry.py
