[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi-ht"
version = "0.1.0"
description = "Health check utilities for FastAPI applications."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "pydantic>=2.11.7",
]

[project.urls]
Homepage = "https://github.com/PinnLabs/fastapi-health-check"
Repository = "https://github.com/PinnLabs/fastapi-health-check"
Issues = "https://github.com/PinnLabs/fastapi-health-check/issues"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.20.0",
    "pytest>=9.0.3",
    "ruff>=0.15.9",
    "uvicorn>=0.44.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/fastapi_health_check"]
